# furigana

./: pyproject.toml  requirements.txt  setup.cfg
furigana/: __init__.py  __main__.py  furigana.py
