[metadata]
name = furigana
version = attr: furigana.VERSION
author = Roman RIEUNIER
author_email = rrieunier@ensc.fr
description = Convert Japanese Kanji to Kanji attached with Hiragana. For example, 「澱んだ街角」→「澱(よど)んだ街角(まちかど)」
long_description = file: README.md, LICENSE.txt
keywords = Japanese Language Processing
license = MIT
url = https://github.com/rrieunier/furigana
classifiers = Development Status :: 3 - Alpha
              Environment :: Console
              Intended Audience :: Developers
              Intended Audience :: Science/Research
              License :: OSI Approved :: MIT License
              Programming Language :: Python :: 3
              Topic :: Software Development :: Libraries :: Python Modules
              Topic :: Text Processing :: Linguistic

[options]
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt

[options.extras_require]
unidic = unidic
unidic-lite = unidic-lite
